[main] Slider by categorie.
Slider for movie with arrow to see all unvisible movie.
Circle back to beginning when end is reached.(same for
both direction)

--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
-<html lang="fr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="css/style.css">
-        <title>Just Stream It</title>
-    </head>
-    <body>
-        <header>
-            
-        </header>
-    </body>
+<html lang='fr'>
+
+  <head>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
+    <link rel='stylesheet' href='css/style.css'>
+    <script src='js/script.js' defer="defer"></script>
+    <title>Just Stream It</title>
+  </head>
+
+  <body>
+    <header></header>
+
+    <main>
+
+      <div class='categorie'>
+        <div class='categorie-header'>
+          <h3 class='categorie-name'>Title</h3>
+          <div class='progress-bar'></div>
+        </div>
+
+        <div class='container'>
+          <button class='arrow left-arrow'>
+            <div class='arrow-button'></div>
+          </button>
+
+          <div class='slider'>
+            <img class='slider-element' src='https://via.placeholder.com/310x210.png?text=1' alt='1'>
+            <img class='slider-element' src='https://via.placeholder.com/320x220.png?text=2' alt='2'>
+            <img class='slider-element' src='https://via.placeholder.com/330x230.png?text=3' alt='3'>
+            <img class='slider-element' src='https://via.placeholder.com/340x240.png?text=4' alt='4'>
+            <img class='slider-element' src='https://via.placeholder.com/350x250.png?text=5' alt='5'>
+            <img class='slider-element' src='https://via.placeholder.com/360x260.png?text=6' alt='6'>
+            <img class='slider-element' src='https://via.placeholder.com/370x270.png?text=7' alt='7'>
+          </div>
+
+          <button class='arrow right-arrow'>
+            <div class='arrow-button'></div>
+          </button>
+        </div>
+      </div>
+
+    </main>
+  </body>
+
 </html>
