[movie_api] generate slider by categorie.
First categorie is best rated movie on imdb.
Three following are fetched randomly and displayed.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <main>
 
-      <div class='categorie'>
+      <!-- <div class='categorie'>
         <div class='categorie-header'>
           <h3 class='categorie-name'>Title</h3>
           <div class='progress-bar'></div>
@@ -26,20 +26,41 @@
           </button>
 
           <div class='slider'>
-            <img class='slider-element' src='https://via.placeholder.com/310x210.png?text=1' alt='1'>
-            <img class='slider-element' src='https://via.placeholder.com/320x220.png?text=2' alt='2'>
-            <img class='slider-element' src='https://via.placeholder.com/330x230.png?text=3' alt='3'>
-            <img class='slider-element' src='https://via.placeholder.com/340x240.png?text=4' alt='4'>
-            <img class='slider-element' src='https://via.placeholder.com/350x250.png?text=5' alt='5'>
-            <img class='slider-element' src='https://via.placeholder.com/360x260.png?text=6' alt='6'>
-            <img class='slider-element' src='https://via.placeholder.com/370x270.png?text=7' alt='7'>
+            <div class='slider-movie'>
+              <img class='slider-image' src='https://via.placeholder.com/310x210.png?text=1' alt='1'>
+              <h4 class="movie-title">The title</h4>
+            </div>
+            <div class='slider-movie'>
+              <img class='slider-image' src='https://via.placeholder.com/320x220.png?text=2' alt='2'>
+              <h4 class="movie-title">The title</h4>
+            </div>
+            <div class='slider-movie'>
+              <img class='slider-image' src='https://via.placeholder.com/330x230.png?text=3' alt='3'>
+              <h4 class="movie-title">The title</h4>
+            </div>
+            <div class='slider-movie'>
+              <img class='slider-image' src='https://via.placeholder.com/340x240.png?text=4' alt='4'>
+              <h4 class="movie-title">The title</h4>
+            </div>
+            <div class='slider-movie'>
+              <img class='slider-image' src='https://via.placeholder.com/350x250.png?text=5' alt='5'>
+              <h4 class="movie-title">The title</h4>
+            </div>
+            <div class='slider-movie'>
+              <img class='slider-image' src='https://via.placeholder.com/360x260.png?text=6' alt='6'>
+              <h4 class="movie-title">The title</h4>
+            </div>
+            <div class='slider-movie'>
+              <img class='slider-image' src='https://via.placeholder.com/370x270.png?text=7' alt='7'>
+              <h4 class="movie-title">The title</h4>
+            </div>
           </div>
 
           <button class='arrow right-arrow'>
             <div class='arrow-button'></div>
           </button>
         </div>
-      </div>
+      </div> -->
 
     </main>
   </body>
