[nav_bar] adding menu in header

--- a/index.html
+++ b/index.html
@@ -10,13 +10,22 @@
   </head>
 
   <body>
-    <header class='banner'>
-      <!-- <div class="best-movie-details">
-        <h2 class="best-movie-title">Movie Title</h2>
-        <p class="best-movie-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quae quibusdam adipisci, asperiores molestias odio soluta ipsam non tenetur animi error nesciunt atque consequatur dolore voluptate. Assumenda totam quas accusamus iusto, sequi rem voluptatem ratione iste voluptate quae? In aliquam impedit harum pariatur, laborum commodi quis maxime soluta. Illum, quaerat?</p>
-        <button class="banner-button">Play</button>
-      </div>
-      <img src="https://via.placeholder.com/310x210.png?text=best movie" alt="1" class="best-movie-image">  -->
+    <header>
+      <nav class="nav-bar">
+        <img src="img/justStreamItLogo.png" alt="logo" class="logo">
+        <ul class="menu">
+          <li><a href="#">Accueil</a></li>
+          <li><a href="#">Catégories</a></li>
+        </ul>
+      </nav>
+      <!-- <div class='banner'>
+        <div class="best-movie-details">
+          <h2 class="best-movie-title">Movie Title</h2>
+          <p class="best-movie-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quae quibusdam adipisci, asperiores molestias odio soluta ipsam non tenetur animi error nesciunt atque consequatur dolore voluptate. Assumenda totam quas accusamus iusto, sequi rem voluptatem ratione iste voluptate quae? In aliquam impedit harum pariatur, laborum commodi quis maxime soluta. Illum, quaerat?</p>
+          <button class="banner-button">Play</button>
+        </div>
+        <img src="https://via.placeholder.com/310x210.png?text=best movie" alt="1" class="best-movie-image"> 
+      </div> -->
     </header>
 
     <main>
