[modal] modal for movie
Selected movie will fill modal with information.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
     <link rel='stylesheet' href='css/style.css'>
-    <script src='js/script.js' defer="defer"></script>
     <title>Just Stream It</title>
   </head>
 
@@ -18,67 +17,22 @@
           <li><a href="#">Catégories</a></li>
         </ul>
       </nav>
-      <!-- <div class='banner'>
-        <div class="best-movie-details">
-          <h2 class="best-movie-title">Movie Title</h2>
-          <p class="best-movie-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur quae quibusdam adipisci, asperiores molestias odio soluta ipsam non tenetur animi error nesciunt atque consequatur dolore voluptate. Assumenda totam quas accusamus iusto, sequi rem voluptatem ratione iste voluptate quae? In aliquam impedit harum pariatur, laborum commodi quis maxime soluta. Illum, quaerat?</p>
-          <button class="banner-button">Play</button>
-        </div>
-        <img src="https://via.placeholder.com/310x210.png?text=best movie" alt="1" class="best-movie-image"> 
-      </div> -->
     </header>
 
     <main>
 
-      <!-- <div class='categorie'>
-        <div class='categorie-header'>
-          <h3 class='categorie-name'>Title</h3>
-          <div class='progress-bar'></div>
+        <div id="modal">
+          <div class="modal-content">
+            <span id="close-modal">&times;</span>
+            <div id='movie-modal'>
+              <div id='movie-modal-details'>
+              </div>
+              <img id='movie-modal-image' src="" alt="">
+            </div>
         </div>
-
-        <div class='container'>
-          <button class='arrow left-arrow'>
-            <div class='arrow-button'></div>
-          </button>
-
-          <div class='slider'>
-            <div class='slider-movie'>
-              <img class='slider-image' src='https://via.placeholder.com/310x210.png?text=1' alt='1'>
-              <h4 class="movie-title">The title</h4>
-            </div>
-            <div class='slider-movie'>
-              <img class='slider-image' src='https://via.placeholder.com/320x220.png?text=2' alt='2'>
-              <h4 class="movie-title">The title</h4>
-            </div>
-            <div class='slider-movie'>
-              <img class='slider-image' src='https://via.placeholder.com/330x230.png?text=3' alt='3'>
-              <h4 class="movie-title">The title</h4>
-            </div>
-            <div class='slider-movie'>
-              <img class='slider-image' src='https://via.placeholder.com/340x240.png?text=4' alt='4'>
-              <h4 class="movie-title">The title</h4>
-            </div>
-            <div class='slider-movie'>
-              <img class='slider-image' src='https://via.placeholder.com/350x250.png?text=5' alt='5'>
-              <h4 class="movie-title">The title</h4>
-            </div>
-            <div class='slider-movie'>
-              <img class='slider-image' src='https://via.placeholder.com/360x260.png?text=6' alt='6'>
-              <h4 class="movie-title">The title</h4>
-            </div>
-            <div class='slider-movie'>
-              <img class='slider-image' src='https://via.placeholder.com/370x270.png?text=7' alt='7'>
-              <h4 class="movie-title">The title</h4>
-            </div>
-          </div>
-
-          <button class='arrow right-arrow'>
-            <div class='arrow-button'></div>
-          </button>
-        </div>
-      </div> -->
-
+      </div>
     </main>
+    <script src='js/script.js' defer="defer"></script>
   </body>
 
 </html>
